{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 18,
  "lineage": "00a1a00c-91e3-bbfb-2c9d-1074345945c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b94f57a1b97b9d41",
            "arn": "arn:aws:ec2:us-east-2:396913700010:elastic-ip/eipalloc-0b94f57a1b97b9d41",
            "association_id": "eipassoc-0c19caa70ae041894",
            "domain": "vpc",
            "id": "eipalloc-0b94f57a1b97b9d41",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0fac0ab25def490fc",
            "private_dns": "ip-10-0-2-173.us-east-2.compute.internal",
            "private_ip": "10.0.2.173",
            "public_dns": "ec2-3-130-122-249.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.122.249",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c80e2b6ccb9ad6d1",
            "arn": "arn:aws:ec2:us-east-2:396913700010:instance/i-09c0c6eebbff08e07",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09c0c6eebbff08e07",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mine",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09afb39dc899e06c8",
            "private_dns": "ip-10-0-1-248.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.248",
            "public_ip": "18.220.65.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d783950309395c5b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0f5b9a63e4d0c17e1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aafb9d40845d8175",
            "tags": {
              "name": "TERRAFORM EC2"
            },
            "tags_all": {
              "name": "TERRAFORM EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f5b9a63e4d0c17e1"
            ]
          },
          "dependencies": [
            "aws_security_group.name",
            "aws_subnet.name",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c80e2b6ccb9ad6d1",
            "arn": "arn:aws:ec2:us-east-2:396913700010:instance/i-045de51cf575da423",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045de51cf575da423",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b3956d231eca52ce",
            "private_dns": "ip-10-0-2-167.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.167",
            "public_ip": "3.142.135.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00b5bd55247590707",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0f5b9a63e4d0c17e1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-052a03d0cfabe6b21",
            "tags": {
              "name": "TERRAFORM PVT-EC2"
            },
            "tags_all": {
              "name": "TERRAFORM PVT-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f5b9a63e4d0c17e1"
            ]
          },
          "dependencies": [
            "aws_security_group.name",
            "aws_subnet.he",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:396913700010:internet-gateway/igw-0f88cacfff3b9300d",
            "id": "igw-0f88cacfff3b9300d",
            "owner_id": "396913700010",
            "tags": {
              "name": "it"
            },
            "tags_all": {
              "name": "it"
            },
            "vpc_id": "vpc-0dae8e67823c14fd9"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b94f57a1b97b9d41",
            "association_id": "eipassoc-0c19caa70ae041894",
            "connectivity_type": "public",
            "id": "nat-0101a7cba977097f9",
            "network_interface_id": "eni-0fac0ab25def490fc",
            "private_ip": "10.0.2.173",
            "public_ip": "3.130.122.249",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-052a03d0cfabe6b21",
            "tags": {
              "Name": "nt"
            },
            "tags_all": {
              "Name": "nt"
            }
          },
          "dependencies": [
            "aws_eip.name",
            "aws_subnet.he",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ha",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:396913700010:route-table/rtb-06856f3edc86a5018",
            "id": "rtb-06856f3edc86a5018",
            "owner_id": "396913700010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0101a7cba977097f9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "pvt-route"
            },
            "tags_all": {
              "name": "pvt-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dae8e67823c14fd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.name",
            "aws_nat_gateway.name",
            "aws_subnet.he",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:396913700010:route-table/rtb-0b7382c83b34e49c6",
            "id": "rtb-0b7382c83b34e49c6",
            "owner_id": "396913700010",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f88cacfff3b9300d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-route"
            },
            "tags_all": {
              "Name": "pub-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dae8e67823c14fd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.name",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "na",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062e71ec24307e1ad",
            "route_table_id": "rtb-06856f3edc86a5018",
            "subnet_id": "subnet-052a03d0cfabe6b21"
          },
          "dependencies": [
            "aws_eip.name",
            "aws_nat_gateway.name",
            "aws_route_table.ha",
            "aws_subnet.he",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c2dc9fd0b039e51",
            "route_table_id": "rtb-0b7382c83b34e49c6",
            "subnet_id": "subnet-0aafb9d40845d8175"
          },
          "dependencies": [
            "aws_internet_gateway.name",
            "aws_route_table.name",
            "aws_subnet.name",
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:396913700010:security-group/sg-0f5b9a63e4d0c17e1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5b9a63e4d0c17e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh only",
            "name_prefix": "",
            "owner_id": "396913700010",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "sg"
            },
            "tags_all": {
              "name": "sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dae8e67823c14fd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "he",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:396913700010:subnet/subnet-052a03d0cfabe6b21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052a03d0cfabe6b21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396913700010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt"
            },
            "tags_all": {
              "Name": "pvt"
            },
            "vpc_id": "vpc-0dae8e67823c14fd9"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:396913700010:subnet/subnet-0aafb9d40845d8175",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aafb9d40845d8175",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396913700010",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public"
            },
            "tags_all": {
              "name": "public"
            },
            "vpc_id": "vpc-0dae8e67823c14fd9"
          },
          "dependencies": [
            "aws_vpc.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:396913700010:vpc/vpc-0dae8e67823c14fd9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c54898c980e8a785",
            "default_route_table_id": "rtb-04350cc327c9a9c59",
            "default_security_group_id": "sg-0436effb13a59eebe",
            "dhcp_options_id": "dopt-0c186b24233343fc4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dae8e67823c14fd9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04350cc327c9a9c59",
            "owner_id": "396913700010",
            "tags": {
              "name": "buddi"
            },
            "tags_all": {
              "name": "buddi"
            }
          }
        }
      ]
    }
  ]
}